--- a/DotNetSample/DataIndexer/packages.config
+++ b/DotNetSample/DataIndexer/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Search" version="1.0.1-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
