--- a/DotNetSample/SimpleMVCApp/packages.config
+++ b/DotNetSample/SimpleMVCApp/packages.config
@@ -9,7 +9,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Azure.Search" version="1.0.1-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
