Using query key instead of admin key for searches

--- a/DotNetHowTo/DotNetHowTo/App.config
+++ b/DotNetHowTo/DotNetHowTo/App.config
@@ -5,6 +5,7 @@
     </startup>
     <appSettings>
       <add key="SearchServiceName" value="Put your search service name here" />
-      <add key="SearchServiceApiKey" value="Put your API key here" />
+      <add key="SearchServiceAdminApiKey" value="Put your primary or secondary API key here" />
+      <add key="SearchServiceQueryApiKey" value="Put your query API key here" />
     </appSettings>
 </configuration>
