--- a/DotNetHowTo/DotNetHowTo/App.config
+++ b/DotNetHowTo/DotNetHowTo/App.config
@@ -8,4 +8,12 @@
       <add key="SearchServiceAdminApiKey" value="Put your primary or secondary API key here" />
       <add key="SearchServiceQueryApiKey" value="Put your query API key here" />
     </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
