--- a/DotNetHowTo/DotNetHowTo/packages.config
+++ b/DotNetHowTo/DotNetHowTo/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Search" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
-  <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="2.0.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
 </packages>
