--- a/DotNetSample/DataIndexer/App.config
+++ b/DotNetSample/DataIndexer/App.config
@@ -1,10 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <appSettings>
-      <add key="SearchServiceName" value="[SEARCH SERVICE]" />
-      <add key="SearchServiceApiKey" value="[SEARCH SERVICE API KEY]" />
+      <add key="SearchServiceName" value="[SEARCH SERVICE NAME]" />
+      <add key="SearchServiceApiKey" value="[API KEY]" />
     </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
