--- a/DotNetSample/SimpleMVCApp/packages.config
+++ b/DotNetSample/SimpleMVCApp/packages.config
@@ -9,10 +9,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Azure.Search" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net45" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
-  <package id="Microsoft.Spatial" version="6.13.0" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="2.0.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
