--- a/DotNetHowToSynonyms/DotNetHowToSynonyms/App.config
+++ b/DotNetHowToSynonyms/DotNetHowToSynonyms/App.config
@@ -4,10 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="SearchServiceName" value="Put your search service name here" />
-    <add key="SearchServiceAdminApiKey" value="Put your primary or secondary API key here" />
-    <add key="SearchServiceQueryApiKey" value="Put your query API key here" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="SearchServiceName" value="[SEARCH SERVICE NAME]" />
+    <add key="SearchServiceApiKey" value="[API KEY]" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -17,16 +15,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
