--- a/DotNetHowToSynonyms/DotNetHowToSynonyms/App.config
+++ b/DotNetHowToSynonyms/DotNetHowToSynonyms/App.config
@@ -4,8 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="SearchServiceName" value="[SEARCH SERVICE NAME]" />
-    <add key="SearchServiceApiKey" value="[API KEY]" />
+    <add key="SearchServiceName" value="Put your search service name here" />
+    <add key="SearchServiceAdminApiKey" value="Put your primary or secondary API key here" />
+    <add key="SearchServiceQueryApiKey" value="Put your query API key here" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
