--- a/DotNetHowToSynonyms/DotNetHowToSynonyms/packages.config
+++ b/DotNetHowToSynonyms/DotNetHowToSynonyms/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Search" version="3.0.0-rc" targetFramework="net45" />
+  <package id="Microsoft.Azure.Search" version="4.0.0-preview" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.4" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.4" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net45" />
