Added support for Rooms.

--- a/DotNetHowTo/DotNetHowTo/appsettings.json
+++ b/DotNetHowTo/DotNetHowTo/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "SearchServiceName": "Put your search service name here",
-    "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
-    "SearchServiceQueryApiKey": "Put your query API key here"
+  "SearchServiceName": "azs-mcarter",
+  "SearchServiceAdminApiKey": "79C8D9286C964005D69DF71EB21E542B",
+  "SearchServiceQueryApiKey": "8BEDB2B218E8F9CD77C6F607117BDA9C"
 }
