Complex Types Updates

--- a/DotNetHowTo/DotNetHowTo/appsettings.json
+++ b/DotNetHowTo/DotNetHowTo/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
-  "SearchServiceName": "azs-mcarter",
-  "SearchServiceAdminApiKey": "79C8D9286C964005D69DF71EB21E542B",
-  "SearchServiceQueryApiKey": "8BEDB2B218E8F9CD77C6F607117BDA9C"
+  "SearchServiceName": "azs-playground",
+  "SearchIndexName": "hotels2",
+  "SearchServiceAdminApiKey": "99E085F55F8BB85A1EBF297CBA0F0006",
+  "SearchServiceQueryApiKey": "EA4510A6219E14888741FCFC19BFBB82"
 }
