Completed remaining updates to prepare the sample for PR.

--- a/DotNetHowTo/DotNetHowTo/appsettings.json
+++ b/DotNetHowTo/DotNetHowTo/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "SearchServiceName": "azs-playground",
-  "SearchIndexName": "hotels2",
-  "SearchServiceAdminApiKey": "99E085F55F8BB85A1EBF297CBA0F0006",
-  "SearchServiceQueryApiKey": "EA4510A6219E14888741FCFC19BFBB82"
+  "SearchServiceName": "[Put your search service name here]",
+  "SearchIndexName": "hotels",
+  "SearchServiceAdminApiKey": "[Put your primary or secondary Admin API key here]",
+  "SearchServiceQueryApiKey": "[Put your primary or secondary Query API key here]"
 }
