Updated [DotNetSample] >> Indexer to use Search SDK libraries v10.0 over v6.0 preview. Verified the application.

--- a/DotNetSample/DataIndexer/packages.config
+++ b/DotNetSample/DataIndexer/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Search" version="6.0.0-preview" targetFramework="net452" />
-  <package id="Microsoft.Azure.Search.Common" version="6.0.0-preview" targetFramework="net452" />
-  <package id="Microsoft.Azure.Search.Data" version="6.0.0-preview" targetFramework="net452" />
-  <package id="Microsoft.Azure.Search.Service" version="6.0.0-preview" targetFramework="net452" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.13" targetFramework="net452" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.15" targetFramework="net452" />
-  <package id="Microsoft.Spatial" version="7.5.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Microsoft.Azure.Search" version="10.1.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Search.Common" version="10.1.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Search.Data" version="10.1.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Search.Service" version="10.1.0" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net452" />
+  <package id="Microsoft.Spatial" version="7.6.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
 </packages>
