Update project DotNetETagsExplainer Azure Search SDK to Track2

--- a/DotNetETagsExplainer/DotNetETagsExplainer/DotNetETagsExplainer.csproj
+++ b/DotNetETagsExplainer/DotNetETagsExplainer/DotNetETagsExplainer.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
-    <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
+    <PackageReference Include="Azure.Search.Documents" Version="1.0.0-preview.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
   </ItemGroup>
