--- a/DotNetETagsExplainer/DotNetETagsExplainer/appsettings.json
+++ b/DotNetETagsExplainer/DotNetETagsExplainer/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "SearchServiceName": "Put your search service name here",
-  "SearchServiceAdminApiKey": "Put your primary or secondary API key here"
+  "SearchServicEndpoint": "Your Search Service Endpoint",
+  "SearchServiceAdminApiKey": "Your Search Service Admin APikey"
 }
