--- a/DotNetHowToSecurityTrimming/DotNetHowToSecurityTrimming/packages.config
+++ b/DotNetHowToSecurityTrimming/DotNetHowToSecurityTrimming/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Azure.Core" version="1.4.1" targetFramework="net461" />
+  <package id="Azure.Search.Documents" version="11.1.1" targetFramework="net461" />
   <package id="Emgu.CV" version="3.2.0.2721" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search" version="4.0.1-preview" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Graph" version="1.5.1" targetFramework="net461" />
   <package id="Microsoft.Graph.Core" version="1.6.1" targetFramework="net461" />
   <package id="Microsoft.Identity.Client" version="1.1.0-preview" targetFramework="net461" />
@@ -9,10 +11,19 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.6" targetFramework="net461" />
   <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net461" />
 </packages>
