Removing DotNetHowToEncryptionUsingCMK and DotNetHowToSecurityTrimming in this PR

--- a/DotNetHowToIndexers/appsettings.json
+++ b/DotNetHowToIndexers/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "SearchServiceName": "Put your search service name here",
+  "SearchServiceEndPoint": "Put your search service EndPoint here",
   "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
-  "AzureSQLConnectionString": "Put your Azure SQL database connection string here",
+  "AzureSQLConnectionString": "Put your Azure SQL database connection string here"
 }
