--- a/DotNetHowToSynonyms/DotNetHowToSynonyms/packages.config
+++ b/DotNetHowToSynonyms/DotNetHowToSynonyms/packages.config
@@ -1,11 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Search" version="5.0.0" targetFramework="net452" />
+  <package id="Azure.Core" version="1.4.1" targetFramework="net472" />
+  <package id="Azure.Search.Documents" version="11.1.1" targetFramework="net472" />
   <package id="Microsoft.Azure.Search.Common" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Search.Data" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Search.Service" version="5.0.0" targetFramework="net452" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
   <package id="Microsoft.Spatial" version="7.4.4" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
