Updated to .NET 6 and client library

--- a/DotNetHowTo/DotNetHowTo/appsettings.json
+++ b/DotNetHowTo/DotNetHowTo/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "SearchServiceEndPoint": "[Put your search service EndPoint here]",
+  "SearchServiceEndPoint": "[Put your search service full URL here]",
   "SearchIndexName": "hotels",
   "SearchServiceAdminApiKey": "[Put your primary or secondary Admin API key here]",
   "SearchServiceQueryApiKey": "[Put your primary or secondary Query API key here]"
